--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
     </header>
     <section id="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sobre a Escola</h2>
-            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento
-                Computacional, através do ensino de Programação.</p>
-            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a
-                turma favorita por todos os professores e professoras que nos ajudam!</p>
+            <h2 class="escola-titulo">Sobre a banda de Rock</h2>
+            <p class="escola-texto-um">O rock é um gênero musical que tem o som da guitarra elétrica como sua marca registrada. Surgiu nos Estados Unidos na década de 50 e teve seu auge nas décadas de 70 e 80.</p>
+            <p class="escola-texto-dois">"gênero musical adorado por fãs, o rock conta com o som da guitarra elétrica como sua marca registrada."
+
+                Veja mais sobre "Rock" em: https://brasilescola.uol.com.br/artes/rock.htm</p>
+            <p class="escola-texto-dois"></p>
+            <p class="escola-texto-dois"></p>
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
     </section>
